--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 
 
     </header>
-    <section>
+    <section class="contactme">
         <h2>Contact</h2>
         <div id="contactform">
         <form class="Aboutme" action="index.html" method="get">
