added project 1 to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
         
         <figure>
             <img id="project1" src="assets/images/pic1.jpg" alt="project1">
-            <figcaption>Project 1</figcaption>
+            <figcaption><a href =" https://ryby1024.github.io/Psychic-Game/">Psychic-Game</a></figcaption>
         </figure>
         
         <figure>
