--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
         
         <figure>
             <img id="project4" src="assets/images/pic4.jpg" alt="project4">
-            <figcaption>Project 4</figcaption>
+            <figcaption><a href="https://ryby1024.github.io/Giphy-Pull/">Giphy Pull</figcaption>
         </figure>            
         
 
