added latest project

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,11 @@
         <figure>
             <img id="project5" src="assets/images/pic5.jpg" alt="project5">
             <figcaption><a href="https://ryby1024.github.io/Train-Scheduler/">Train Scheduler</figcaption>
-        </figure>            
+        </figure>
+        <figure>
+            <img id="project6" src="assets/images/pic6.jpg" alt="project6">
+            <figcaption><a href="https://mc180g.github.io/BrewFinder/">Brew Finder</figcaption>
+        </figure>                
         
         
 
